# ComfyUI-VoxCPMTTS

./: AILab_VoxCPMTTS.py  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: VoxCPMTTS_v1.0.0.json  VoxCPMTTS_v2.0.0.json
voxcpm/: __init__.py  cli.py  core.py  zipenhancer.py
voxcpm/model/: __init__.py  utils.py  voxcpm.py
voxcpm/modules/audiovae/: __init__.py  audio_vae.py
voxcpm/modules/layers/: scalar_quantization_layer.py
voxcpm/modules/locdit/: __init__.py  local_dit.py  unified_cfm.py
voxcpm/modules/locenc/: __init__.py  local_encoder.py
voxcpm/modules/minicpm4/: __init__.py  cache.py  config.py  model.py
voxcpm/utils/: text_normalize.py
